--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Montserrat", sans-serif;
+  background-color: #dbdfe6;
 }
 /* main styles */
 
@@ -9,7 +10,7 @@ body {
   width: 1033px;
   margin: 0 auto;
   background-color: rgb(252, 250, 250);
-  box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.2);
 }
 
 .main-content {
@@ -159,13 +160,13 @@ body {
 
 /* education styles */
 
-.university {
+/* .university {
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
   line-height: 20px;
   margin-bottom: 10px;
-}
+} */
 
 .department {
   font-style: normal;
@@ -173,7 +174,7 @@ body {
   font-size: 14px;
   line-height: 17px;
   color: #000000;
-  margin-bottom: 10px;
+  margin: 0;
 }
 
 /* asidebar styles */
